# shared-docker-files

./: .gitignore  LICENSE  README
.github/workflow/: ci.yaml
.github/workflows/: build-db-push.yml  build-db-sync.yml  build-dispatcher.yml  build-segment-gatherer.yml  build-trollflow2.yml  build-trollstalker.yml  build-watcher.yml  build-wms.yml  ci.yml
cat/: Dockerfile  cat.py  entrypoint.sh  requirements.txt
compose-env/: README.md  docker-compose.yml
compose-env/config/: segment_gatherer.yaml  trollflow2_ears_avhrr.yaml  trollflow2_ears_viirs.yaml  trollflow2_seviri_hrit.yaml  trollstalker.ini  trollstalker_logging.ini
compose-env/posttroll/: Dockerfile  entrypoint.sh
compose-env/segment_gatherer/: Dockerfile  entrypoint.sh  environment.yaml
db-push/: Containerfile  README.md  db_push.py  pyproject.toml
db-sync/: Containerfile  README.md  db-and-mapfile-handle.py  db-and-mapfile-handle.yaml  db-sync.py  db-sync.yaml  entrypoint.sh  init.sql  mapserver-demo.map  requirements_stable.txt  trollflow2.yaml
db-sync/output/: mapfile_layers.map
dispatcher/: Containerfile  log_config.yaml  pyproject.toml
pytroll-watcher/: Containerfile  log_config.yaml  pyproject.toml
pytroll_base_image/: README
sat-wms/: Containerfile  pyproject.toml
segment-gatherer/: Dockerfile  README.md  entrypoint.sh  environment.yaml
trollflow2/: Containerfile.mamba  Containerfile.uv  Dockerfile  entrypoint.sh  entrypoint.uv.sh  environment.yaml  pyproject.toml
trollflow2_full_image/: README
trollmoves/: README
trollstalker/: README.md  entrypoint.sh  environment.yaml
(+38 files in other folders)
